cleaned up folders

--- a/figures/SctBench_res.tex
+++ b/figures/SctBench_res.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{lrrr}
-& k & P & violated\\\hline
+test & k & P & violated\\\hline
 AccountBad & 5 & 0.5 & 1\\ 
 AccountBad & 11 & 0.8 & 1\\ 
 Carter01Bad & 5 & 0.5 & 1\\ 
@@ -37,4 +37,14 @@ WronglockBad & 11 & 0.8 & 0.960\\
 WronglockBad & 22 & 0.9 & 0.999\\ 
 WronglockBad & 45 & 0.95 & 1\\ 
 WronglockBad & 230 & 0.99 & 1\\ 
+AccountBadJVM & 100000 & 0.0 & 95\\ 
+Carter01BadJVM & 100000 & 0.0 & 0.004\\ 
+FsbenchBadJVM0 & 0 & 100000.0 & 100\\ 
+Phase01BadJVM & 100000 & 0.0 & 100\\ 
+StackBadJVM & 100000 & 0.0 & 0.008\\ 
+TokenRingBadJVM & 100000 & 0.0 & 2\\ 
+TwostageBadJVM & 100000 & 0.0 & 0\\ 
+Wronglock1BadJVM & 100000 & 0.0 & 0.001\\ 
+Wronglock3BadJVM & 100000 & 0.0 & 0\\ 
+WronglockBadJVM & 100000 & 0.0 & 0\\ 
 \end{tabular}
