--- a/figures/baseline_res.tex
+++ b/figures/baseline_res.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{lrrr}
-& k & P & violated\\\hline
+test & k & P & violated\\\hline
 MinimizationJVM & 200000 & 0.0 & 0\\ 
 DeadlockJVM & 48170 & 0.0 & 48\\ 
 MinimizationTest & 14 & 0.5 & 5\\ 
