--- a/figures/HashMap_res_test.tex
+++ b/figures/HashMap_res_test.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lrrr}
-& k & P & violated\\\hline
-WrongStripedMap1Bad & 5 & 0.5 & 0.003\\ 
-WrongStripedMap1Bad & 11 & 0.8 & 0.003\\ 
-WrongStripedMap2Bad & 5 & 0.5 & 0.003\\ 
-WrongStripedMap2Bad & 11 & 0.8 & 0.003\\ 
-WrongStripedMap3Bad & 5 & 0.5 & 0.003\\ 
-WrongStripedMap3Bad & 11 & 0.8 & 0.003\\ 
+test & k & P & violated\\\hline
+WrongStripedMap1Bad & 5 & 0.5 & 0.004\\ 
+WrongStripedMap1Bad & 11 & 0.8 & 0.004\\ 
+WrongStripedMap2Bad & 5 & 0.5 & 0.004\\ 
+WrongStripedMap2Bad & 11 & 0.8 & 0.004\\ 
+WrongStripedMap3Bad & 5 & 0.5 & 0.004\\ 
+WrongStripedMap3Bad & 11 & 0.8 & 0.004\\ 
 WrongStripedMap4Bad & 5 & 0.5 & 0\\ 
 WrongStripedMap4Bad & 11 & 0.8 & 0\\ 
 WrongStripedMap4Bad & 22 & 0.9 & 0.001\\ 
-WrongStripedMap4Bad & 45 & 0.95 & 0.001\\ 
-WrongStripedMap4Bad & 230 & 0.99 & 0.003\\ 
-WrongStripedMap4Bad & 2302 & 0.999 & 0.003\\ 
+WrongStripedMap4Bad & 45 & 0.95 & 0\\ 
+WrongStripedMap4Bad & 230 & 0.99 & 0.004\\ 
+WrongStripedMap4Bad & 2302 & 0.999 & 0.004\\ 
 \end{tabular}
